--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "GATSBY_ENV=production gatsby build",
-    "develop": "GATSBY_ENV=development gatsby develop",
+    "build": "gatsby build",
+    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
