--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@loadable/component": "^5.14.1",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.26.1",
@@ -24,6 +25,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
+    "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
     "react-spring": "^8.0.27",
     "shopify-buy": "^2.11.0",
