--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.1.0",
     "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
+    "react-social-icons": "^4.1.0",
     "react-spring": "^8.0.27",
     "shopify-buy": "^2.11.0",
     "slick-carousel": "^1.8.1",
