--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [[redirects]]
-  from = https://shop.petsclubhn.com/
-  to = https://petsclubhn.com/ 301!
+  from = "https://shop.petsclubhn.com/"
+  to = "https://petsclubhn.com/"
   status = 301
-  force = false
+  force = true
 
   
